(library
 (name oquery)
 (inline_tests)
 (libraries
  base
  core
  alcotest
  fmt
  ppx_inline_test
  ppx_deriving
  ppx_expect
  ppx_sexp_conv
  sexplib)
 (flags
  (:standard -w -11 -open Sexplib.Std))
 (preprocess
  (pps
   ppx_expect
   ppx_deriving.show
   ppx_deriving.enum
   ppx_deriving.ord
   ppx_deriving.eq
   ppx_sexp_conv)))
